feat: get champion endpoint
